--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: hyflux-ppt-generator
     ports:
       - "5001:5000"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       # Mount PowerPoint template directory (separate from Flask templates)
       - ./hyflux-ppt-automation/templates:/app/ppt_templates:ro
